force-app/main/default/objects/DA_CaseActivity__b/DA_CaseActivity__b.object-meta.xml
<CustomObject>
    <label>DA Case Activity</label>
    <pluralLabel>DA Case Activity</pluralLabel>
</CustomObject>