force-app/main/default/objects/DA_CaseActivity__b/fields/CaseCreationDateTime__c.field-meta.xml
<CustomField>
    <fullName>CaseCreationDateTime__c</fullName>
    <label>Case Creation Date/Time</label>
    <type>DateTime</type>
</CustomField>