force-app/main/default/objects/DA_CaseActivity__b/fields/IsAgentFirstResponse__c.field-meta.xml
<CustomField>
    <fullName>IsAgentFirstResponse__c</fullName>
    <label>Is Agent First Response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>